--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <title>STIGMA Store Roblox</title>
+  <title>M STIGMA Store Roblox</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet"/>
@@ -92,19 +92,19 @@
           <i class="far fa-copy text-white text-lg"></i>
         </a>
         <a class="flex justify-between items-center" href="#">
-          <span>Cek Transaksi</span>
+          <span>Eror</span>
           <i class="fas fa-sitemap text-white text-lg"></i>
         </a>
         <a class="flex justify-between items-center" href="#">
-          <span>Kalkulator</span>
+          <span>Eror</span>
           <i class="fas fa-arrow-right text-white text-lg"></i>
         </a>
         <a class="flex justify-between items-center" href="#">
-          <span>Masuk</span>
+          <span>Eror</span>
           <i class="fas fa-sign-in-alt text-white text-lg"></i>
         </a>
         <a class="flex justify-between items-center" href="#">
-          <span>Daftar</span>
+          <span>Eror</span>
           <i class="fas fa-user-plus text-white text-lg"></i>
         </a>
       </nav>
@@ -241,7 +241,7 @@
      <img alt="Logo icon with white lines on black background representing Robux Premium" class="w-10 h-10" height="40" src="https://storage.googleapis.com/a1aa/image/c12a2b93-b540-4248-5f54-86a8ac4bdfdb.jpg" width="40"/>
      <div>
       <p class="text-[#f97316] font-bold text-[18px] leading-none">
-       Rp 66.938
+       Rp Free
       </p>
       <p class="text-[#b59e8c] text-[12px] line-through leading-none">
        Rp 90.000
@@ -253,7 +253,7 @@
     </p>
     <div class="flex space-x-2">
      <button class="bg-gradient-to-b from-[#f97316] to-[#c75a0a] text-white text-[11px] font-semibold rounded-md px-3 py-1">
-      Disc 26%
+      Disc 100%
      </button>
      <button class="bg-white rounded-md px-2 py-1 flex items-center space-x-1" style="font-size: 9px; font-weight: 600">
       <i class="fas fa-sync-alt text-[#3a9e3a]">
@@ -277,7 +277,7 @@
       <img alt="Grey hexagonal Robux icon for 80 Robux" class="w-7 h-7" height="30" src="https://storage.googleapis.com/a1aa/image/da794fab-3b6f-4a09-1a46-ac37fa6c2533.jpg" width="30"/>
       <div>
        <p class="text-[#6b6b6b] font-semibold text-[14px] leading-none">
-        Rp 14.000
+        Rp Free
        </p>
        <p class="text-[#6b6b6b] text-[10px] line-through leading-none">
         Rp 20.000
@@ -289,7 +289,7 @@
      </p>
      <div class="flex space-x-2">
       <button class="bg-[#3a3a3a] text-[#b59e8c] text-[10px] font-semibold rounded-md px-3 py-1" disabled="">
-       Disc 22%
+       Disc 100%
       </button>
       <button class="bg-white rounded-md px-2 py-1 flex items-center space-x-1" style="font-size: 9px; font-weight: 600">
        <i class="fas fa-sync-alt text-[#3a9e3a]">
@@ -311,7 +311,7 @@
       <img alt="Grey hexagonal Robux icon for 160 Robux" class="w-7 h-7" height="30" src="https://storage.googleapis.com/a1aa/image/b5cf2205-1874-4ea9-fe9f-18e77cc5baff.jpg" width="30"/>
       <div>
        <p class="text-[#6b6b6b] font-semibold text-[14px] leading-none">
-        Rp 28.000
+        Rp Free
        </p>
        <p class="text-[#6b6b6b] text-[10px] line-through leading-none">
         Rp 36.000
@@ -323,7 +323,7 @@
      </p>
      <div class="flex space-x-2">
       <button class="bg-[#3a3a3a] text-[#b59e8c] text-[10px] font-semibold rounded-md px-3 py-1" disabled="">
-       Disc 22%
+       Disc 100%
       </button>
       <button class="bg-white rounded-md px-2 py-1 flex items-center space-x-1" style="font-size: 9px; font-weight: 600">
        <i class="fas fa-sync-alt text-[#3a9e3a]">
@@ -345,7 +345,7 @@
       <img alt="Grey hexagonal Robux icon for 240 Robux" class="w-7 h-7" height="30" src="https://storage.googleapis.com/a1aa/image/b2bb4b94-eafb-4688-a05f-e12432cf9c52.jpg" width="30"/>
       <div>
        <p class="text-[#6b6b6b] font-semibold text-[14px] leading-none">
-        Rp 42.000
+        Rp Free
        </p>
        <p class="text-[#6b6b6b] text-[10px] line-through leading-none">
         Rp 54.000
@@ -357,7 +357,7 @@
      </p>
      <div class="flex space-x-2">
       <button class="bg-[#3a3a3a] text-[#b59e8c] text-[10px] font-semibold rounded-md px-3 py-1" disabled="">
-       Disc 22%
+       Disc 100%
       </button>
       <button class="bg-white rounded-md px-2 py-1 flex items-center space-x-1" style="font-size: 9px; font-weight: 600">
        <i class="fas fa-sync-alt text-[#3a9e3a]">
@@ -379,7 +379,7 @@
       <img alt="Grey hexagonal Robux icon for 320 Robux" class="w-7 h-7" height="30" src="https://storage.googleapis.com/a1aa/image/99e9044a-758f-4454-2b58-a1149cb9f623.jpg" width="30"/>
       <div>
        <p class="text-[#6b6b6b] font-semibold text-[14px] leading-none">
-        Rp 56.000
+        Rp Free
        </p>
        <p class="text-[#6b6b6b] text-[10px] line-through leading-none">
         Rp 72.000
@@ -391,7 +391,7 @@
      </p>
      <div class="flex space-x-2">
       <button class="bg-[#3a3a3a] text-[#b59e8c] text-[10px] font-semibold rounded-md px-3 py-1" disabled="">
-       Disc 22%
+       Disc 100%
       </button>
       <button class="bg-white rounded-md px-2 py-1 flex items-center space-x-1" style="font-size: 9px; font-weight: 600">
        <i class="fas fa-sync-alt text-[#3a9e3a]">
@@ -442,7 +442,7 @@
      <div class="flex items-center space-x-3">
       <img alt="Gray hexagon icon with white center" class="w-6 h-6" height="24" src="https://storage.googleapis.com/a1aa/image/01dc9fcf-00d1-4206-d101-62e08fb65614.jpg" width="24"/>
       <span class="text-[#FF7F00] font-semibold text-lg select-none">
-       Rp 66.938
+       Rp Free
       </span>
      </div>
      <button class="absolute bottom-3 right-3 bg-white rounded-full px-3 py-1 flex items-center space-x-1 text-xs font-semibold select-none">
@@ -462,7 +462,7 @@
      <div class="flex items-center space-x-3">
       <img alt="Gray hexagon icon with white center" class="w-6 h-6" height="24" src="https://storage.googleapis.com/a1aa/image/01dc9fcf-00d1-4206-d101-62e08fb65614.jpg" width="24"/>
       <span class="text-[#FF7F00] font-semibold text-lg select-none">
-       Rp 133.875
+       Rp Free
       </span>
      </div>
      <button class="absolute bottom-3 right-3 bg-white rounded-full px-3 py-1 flex items-center space-x-1 text-xs font-semibold select-none">
@@ -482,7 +482,7 @@
      <div class="flex items-center space-x-3">
       <img alt="Gray hexagon icon with white center" class="w-6 h-6" height="24" src="https://storage.googleapis.com/a1aa/image/01dc9fcf-00d1-4206-d101-62e08fb65614.jpg" width="24"/>
       <span class="text-[#FF7F00] font-semibold text-lg select-none">
-       Rp 200.813
+       Rp Free
       </span>
      </div>
      <button class="absolute bottom-3 right-3 bg-white rounded-full px-3 py-1 flex items-center space-x-1 text-xs font-semibold select-none">
@@ -503,7 +503,7 @@
      <div class="flex items-center space-x-3">
       <img alt="Gray hexagon icon with white center" class="w-6 h-6" height="24" src="https://storage.googleapis.com/a1aa/image/01dc9fcf-00d1-4206-d101-62e08fb65614.jpg" width="24"/>
       <span class="text-[#FF7F00] font-semibold text-lg select-none">
-       Rp 267.750
+       Rp Free
       </span>
      </div>
      <button class="absolute bottom-3 right-3 bg-white rounded-full px-3 py-1 flex items-center space-x-1 text-xs font-semibold select-none">
@@ -523,7 +523,7 @@
      <div class="flex items-center space-x-3">
       <img alt="Gray hexagon icon with white center" class="w-6 h-6" height="24" src="https://storage.googleapis.com/a1aa/image/01dc9fcf-00d1-4206-d101-62e08fb65614.jpg" width="24"/>
       <span class="text-[#FF7F00] font-semibold text-lg select-none">
-       Rp 334.688
+       Rp Free
       </span>
      </div>
      <button class="absolute bottom-3 right-3 bg-white rounded-full px-3 py-1 flex items-center space-x-1 text-xs font-semibold select-none">
@@ -543,7 +543,7 @@
      <div class="flex items-center space-x-3">
       <img alt="Gray hexagon icon with white center" class="w-6 h-6" height="24" src="https://storage.googleapis.com/a1aa/image/01dc9fcf-00d1-4206-d101-62e08fb65614.jpg" width="24"/>
       <span class="text-[#FF7F00] font-semibold text-lg select-none">
-       Rp 401.625
+       Rp Free
       </span>
      </div>
      <button class="absolute bottom-3 right-3 bg-white rounded-full px-3 py-1 flex items-center space-x-1 text-xs font-semibold select-none">
@@ -563,7 +563,7 @@
      <div class="flex items-center space-x-3">
       <img alt="Gray hexagon icon with white center" class="w-6 h-6" height="24" src="https://storage.googleapis.com/a1aa/image/01dc9fcf-00d1-4206-d101-62e08fb65614.jpg" width="24"/>
       <span class="text-[#FF7F00] font-semibold text-lg select-none">
-       Rp 468.563
+       Rp Free
       </span>
      </div>
      <button class="absolute bottom-3 right-3 bg-white rounded-full px-3 py-1 flex items-center space-x-1 text-xs font-semibold select-none">
@@ -583,7 +583,7 @@
      <div class="flex items-center space-x-3">
       <img alt="Gray hexagon icon with white center" class="w-6 h-6" height="24" src="https://storage.googleapis.com/a1aa/image/01dc9fcf-00d1-4206-d101-62e08fb65614.jpg" width="24"/>
       <span class="text-[#FF7F00] font-semibold text-lg select-none">
-       Rp 535.500
+       Rp Free
       </span>
      </div>
      <button class="absolute bottom-3 right-3 bg-white rounded-full px-3 py-1 flex items-center space-x-1 text-xs font-semibold select-none">
@@ -603,7 +603,7 @@
      <div class="flex items-center space-x-3">
       <img alt="Gray hexagon icon with white center" class="w-6 h-6" height="24" src="https://storage.googleapis.com/a1aa/image/01dc9fcf-00d1-4206-d101-62e08fb65614.jpg" width="24"/>
       <span class="text-[#FF7F00] font-semibold text-lg select-none">
-       Rp 669.375
+       Rp Free
       </span>
      </div>
      <button class="absolute bottom-3 right-3 bg-white rounded-full px-3 py-1 flex items-center space-x-1 text-xs font-semibold select-none">
@@ -623,7 +623,7 @@
      <div class="flex items-center space-x-3">
       <img alt="Gray hexagon icon with white center" class="w-6 h-6" height="24" src="https://storage.googleapis.com/a1aa/image/01dc9fcf-00d1-4206-d101-62e08fb65614.jpg" width="24"/>
       <span class="text-[#FF7F00] font-semibold text-lg select-none">
-       Rp 1.071.001
+       Rp Free
       </span>
      </div>
      <button class="absolute bottom-3 right-3 bg-white rounded-full px-3 py-1 flex items-center space-x-1 text-xs font-semibold select-none">
@@ -666,7 +666,7 @@
      <div class="flex items-center space-x-2">
       <img alt="Robux icon, hexagonal shape with R letter inside" class="w-5 h-5" height="20" src="https://storage.googleapis.com/a1aa/image/dc7bf3d2-7bed-4ed6-3261-7b71f2b49d9c.jpg" width="20"/>
       <span class="text-[#f97316] font-semibold text-sm">
-       Rp 1.338.750
+       Rp Free
       </span>
      </div>
      <button class="bg-white text-[#0f4f3f] text-[10px] font-semibold rounded px-2 py-0.5 flex items-center space-x-1 float-right">
@@ -684,7 +684,7 @@
      <div class="flex items-center space-x-2">
       <img alt="Robux icon, hexagonal shape with R letter inside" class="w-5 h-5" height="20" src="https://storage.googleapis.com/a1aa/image/dc7bf3d2-7bed-4ed6-3261-7b71f2b49d9c.jpg" width="20"/>
       <span class="text-[#f97316] font-semibold text-sm">
-       Rp 2.008.125
+       Rp Free
       </span>
      </div>
      <button class="bg-white text-[#0f4f3f] text-[10px] font-semibold rounded px-2 py-0.5 flex items-center space-x-1 float-right">
@@ -702,7 +702,7 @@
      <div class="flex items-center space-x-2">
       <img alt="Robux icon, hexagonal shape with R letter inside" class="w-5 h-5" height="20" src="https://storage.googleapis.com/a1aa/image/dc7bf3d2-7bed-4ed6-3261-7b71f2b49d9c.jpg" width="20"/>
       <span class="text-[#f97316] font-semibold text-sm">
-       Rp 2.677.500
+       Rp Free
       </span>
      </div>
      <button class="bg-white text-[#0f4f3f] text-[10px] font-semibold rounded px-2 py-0.5 flex items-center space-x-1 float-right">
@@ -720,7 +720,7 @@
      <div class="flex items-center space-x-2">
       <img alt="Robux icon, hexagonal shape with R letter inside" class="w-5 h-5" height="20" src="https://storage.googleapis.com/a1aa/image/dc7bf3d2-7bed-4ed6-3261-7b71f2b49d9c.jpg" width="20"/>
       <span class="text-[#f97316] font-semibold text-sm">
-       Rp 5.355.000
+       Rp Free
       </span>
      </div>
      <button class="bg-white text-[#0f4f3f] text-[10px] font-semibold rounded px-2 py-0.5 flex items-center space-x-1 float-right">
@@ -787,7 +787,7 @@
       </div>
       <img alt="QRIS payment logos including ovo, dana, gopay, mandiri, and others in grayscale" class="w-full max-w-[200px] mb-2" height="30" src="https://storage.googleapis.com/a1aa/image/51743914-f195-4613-75aa-3ebe172af1fd.jpg" width="200"/>
       <div class="text-pink-500 text-xs font-semibold text-center">
-       Min. Rp 100
+       Min. Rp 10.000
       </div>
      </div>
     </div>
@@ -961,7 +961,7 @@
             <!-- Header -->
             <div class="bg-gradient-to-r from-orange-500 to-orange-600 p-4 text-white">
                 <h1 class="text-xl font-bold">Keranjang Belanja</h1>
-                <p class="text-sm opacity-90">Lengkapi pesanan Anda</p>
+                <p class="text-sm opacity-90"></p>
             </div>
             
             <!-- Konten utama -->
@@ -969,7 +969,7 @@
                 <!-- Pesan kosong dengan animasi -->
                 <div class="border border-dashed border-gray-400 rounded-md text-center text-sm text-gray-600 py-4 mb-4 border-pulse">
                     <i class="fas fa-exclamation-circle text-orange-500 mr-2"></i>
-                    Belum ada item produk yang dipilih.
+                    Silahkan Pesan Sekarang.
                 </div>
                 
                 <!-- Tombol Pesan Sekarang -->
