--- a/BlackMarket.html
+++ b/BlackMarket.html
@@ -10,9 +10,12 @@
       margin: 0;
       padding: 0;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
+      justify-content: center;
       height: 100vh;
+      color: white;
+      font-family: Arial, sans-serif;
     }
 
     .fade-in {
@@ -36,13 +39,48 @@
 
     .glow-hover:hover {
       transform: scale(1.03);
-      box-shadow: 0 0 25px rgba(173, 216, 230, 0.5); /* cahaya biru */
+      box-shadow: 0 0 25px rgba(173, 216, 230, 0.5);
     }
 
     img {
       width: 90%;
       max-width: 500px;
       border-radius: 12px;
+    }
+
+    h2 {
+      margin-top: 20px;
+      margin-bottom: 20px;
+      font-size: 1.5em;
+      text-align: center;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      gap: 20px;
+      width: 100%;
+      max-width: 1200px;
+      padding: 0 20px;
+    }
+
+    .diagonal-stripes {
+      background-color: #1db1d1;
+      border-radius: 12px;
+      padding: 20px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .diagonal-stripes img {
+      width: 64px;
+      height: 64px;
+      border-radius: 8px;
+    }
+
+    .text-white {
+      color: white;
     }
   </style>
 </head>
@@ -56,55 +94,54 @@
     >
   </a>
 
+  <h2>
+    <span>🔥</span> PALING BANYAK DI BELI <span>🔥</span>
+  </h2>
+
+  <div class="grid">
+    <div class="diagonal-stripes">
+      <img alt="Steam Wallet logo" src="https://storage.googleapis.com/a1aa/image/04afb59e-dc0f-4a22-3b45-cd329402a223.jpg"/>
+      <div class="text-white">
+        <p class="font-semibold">Ress Roblox</p>
+        <p class="text-xs opacity-80">Stock 10.000</p>
+      </div>
+    </div>
+    <div class="diagonal-stripes">
+      <img alt="Google Play Card logo" src="https://storage.googleapis.com/a1aa/image/fb4e0354-ab84-47b1-edfd-8d69e819e45a.jpg"/>
+      <div class="text-white">
+        <p class="font-semibold">Ress Netflix</p>
+        <p class="text-xs opacity-80">Stock 10.000</p>
+      </div>
+    </div>
+    <div class="diagonal-stripes">
+      <img alt="Honor of Kings logo" src="https://storage.googleapis.com/a1aa/image/776dd36e-cd75-4143-1e37-a22a0a78b8cd.jpg"/>
+      <div class="text-white">
+        <p class="font-semibold">Ress Spotify</p>
+        <p class="text-xs opacity-80">10.000</p>
+      </div>
+    </div>
+    <div class="diagonal-stripes">
+      <img alt="PUBG Mobile logo" src="https://storage.googleapis.com/a1aa/image/3d792e4e-8976-4c33-84d3-7abf30bd813a.jpg"/>
+      <div class="text-white">
+        <p class="font-semibold">Ress PUBG</p>
+        <p class="text-xs opacity-80">Stock 10.000</p>
+      </div>
+    </div>
+    <div class="diagonal-stripes">
+      <img alt="Roblox logo" src="https://storage.googleapis.com/a1aa/image/7645ec38-2caa-4502-419b-73214cb5c7bc.jpg"/>
+      <div class="text-white">
+        <p class="font-semibold">Ress Hotmail</p>
+        <p class="text-xs opacity-80">Stock 100.000</p>
+      </div>
+    </div>
+    <div class="diagonal-stripes">
+      <img alt="Magic Chess logo" src="https://storage.googleapis.com/a1aa/image/0bfa7eaf-bd52-41e5-3574-9358675f80f9.jpg"/>
+      <div class="text-white">
+        <p class="font-semibold">Ress Capcut</p>
+        <p class="text-xs opacity-80">Stock 10.000</p>
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
-    <h2 class="mt-10 mb-6 text-white font-bold text-sm md:text-base flex items-center gap-2 select-none">
-        <span>🔥</span>
-        PALING BANYAK DI BELI
-        <span>🔥</span>
-    </h2>
-    
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 w-full max-w-6xl">
-        <div class="diagonal-stripes bg-[#1db1d1] rounded-xl p-4 flex items-center gap-4">
-            <img alt="Steam Wallet logo" class="w-16 h-16 rounded-lg object-cover flex-shrink-0" src="https://storage.googleapis.com/a1aa/image/04afb59e-dc0f-4a22-3b45-cd329402a223.jpg"/>
-            <div class="text-white text-sm">
-                <p class="font-semibold text-base">Ress Roblox</p>
-                <p class="text-xs opacity-80">Stock 10.000</p>
-            </div>
-        </div>
-        <div class="diagonal-stripes bg-[#1db1d1] rounded-xl p-4 flex items-center gap-4">
-            <img alt="Google Play Card logo" class="w-16 h-16 rounded-lg object-cover flex-shrink-0" src="https://storage.googleapis.com/a1aa/image/fb4e0354-ab84-47b1-edfd-8d69e819e45a.jpg"/>
-            <div class="text-white text-sm">
-                <p class="font-semibold text-base">Ress Netflix</p>
-                <p class="text-xs opacity-80">Stock 10.000</p>
-            </div>
-        </div>
-        <div class="diagonal-stripes bg-[#1db1d1] rounded-xl p-4 flex items-center gap-4">
-            <img alt="Honor of Kings logo" class="w-16 h-16 rounded-lg object-cover flex-shrink-0" src="https://storage.googleapis.com/a1aa/image/776dd36e-cd75-4143-1e37-a22a0a78b8cd.jpg"/>
-            <div class="text-white text-sm">
-                <p class="font-semibold text-base">Ress Spotify</p>
-                <p class="text-xs opacity-80">10.000</p>
-            </div>
-        </div>
-        <div class="diagonal-stripes bg-[#1db1d1] rounded-xl p-4 flex items-center gap-4">
-            <img alt="PUBG Mobile logo" class="w-16 h-16 rounded-lg object-cover flex-shrink-0" src="https://storage.googleapis.com/a1aa/image/3d792e4e-8976-4c33-84d3-7abf30bd813a.jpg"/>
-            <div class="text-white text-sm">
-                <p class="font-semibold text-base">Ress PUBG</p>
-                <p class="text-xs opacity-80">Stock 10.000</p>
-            </div>
-        </div>
-        <div class="diagonal-stripes bg-[#1db1d1] rounded-xl p-4 flex items-center gap-4">
-            <img alt="Roblox logo" class="w-16 h-16 rounded-lg object-cover flex-shrink-0" src="https://storage.googleapis.com/a1aa/image/7645ec38-2caa-4502-419b-73214cb5c7bc.jpg"/>
-            <div class="text-white text-sm">
-                <p class="font-semibold text-base">Ress Hotmail</p>
-                <p class="text-xs opacity-80">Stock 100.000</p>
-            </div>
-        </div>
-        <div class="diagonal-stripes bg-[#1db1d1] rounded-xl p-4 flex items-center gap-4">
-            <img alt="Magic Chess logo" class="w-16 h-16 rounded-lg object-cover flex-shrink-0" src="https://storage.googleapis.com/a1aa/image/0bfa7eaf-bd52-41e5-3574-9358675f80f9.jpg"/>
-            <div class="text-white text-sm">
-                <p class="font-semibold text-base">Ress Capcut</p>
-                <p class="text-xs opacity-80">Stock 10.000</p>
-            </div>
-        </div>
-    </div>
