--- a/BlackMarket.html
+++ b/BlackMarket.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,84 +15,88 @@
       height: 100vh;
       color: white;
       font-family: Arial, sans-serif;
-    }
+      overflow: hidden;
+    }.fade-in {
+  opacity: 0;
+  transform: translateY(40px);
+  animation: fadeInUp 1.5s ease-out forwards;
+}
 
-    .fade-in {
-      opacity: 0;
-      transform: translateY(40px);
-      animation: fadeInUp 1.5s ease-out forwards;
-    }
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
-    @keyframes fadeInUp {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
+.glow-hover {
+  transition: all 0.3s ease-in-out;
+  border-radius: 12px;
+  box-shadow: 0 0 0 transparent;
+}
 
-    .glow-hover {
-      transition: all 0.3s ease-in-out;
-      border-radius: 12px;
-      box-shadow: 0 0 0 transparent;
-    }
+.glow-hover:hover {
+  transform: scale(1.03);
+  box-shadow: 0 0 25px rgba(173, 216, 230, 0.5);
+}
 
-    .glow-hover:hover {
-      transform: scale(1.03);
-      box-shadow: 0 0 25px rgba(173, 216, 230, 0.5);
-    }
+img {
+  width: 90%;
+  max-width: 500px;
+  border-radius: 12px;
+}
 
-    img {
-      width: 90%;
-      max-width: 500px;
-      border-radius: 12px;
-    }
+h2 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 1.5em;
+  text-align: center;
+}
 
-    h2 {
-      margin-top: 20px;
-      margin-bottom: 20px;
-      font-size: 1.5em;
-      text-align: center;
-    }
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+  width: 100%;
+  max-width: 1200px;
+  padding: 0 20px;
+}
 
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-      gap: 20px;
-      width: 100%;
-      max-width: 1200px;
-      padding: 0 20px;
-    }
+.diagonal-stripes {
+  background-color: #1db1d1;
+  border-radius: 12px;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
 
-    .diagonal-stripes {
-      background-color: #1db1d1;
-      border-radius: 12px;
-      padding: 20px;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
+.diagonal-stripes img {
+  width: 64px;
+  height: 64px;
+  border-radius: 8px;
+}
 
-    .diagonal-stripes img {
-      width: 64px;
-      height: 64px;
-      border-radius: 8px;
-    }
+.text-white {
+  color: white;
+}
 
-    .text-white {
-      color: white;
-    }
-  </style>
-</head>
-<body>
+/* Rain Animation */
+.rain {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 1;
+}
 
-  <a href+ target="_blank">
-    <img 
-      src="https://i.ibb.co/5gbxvx7w/IMG-20250621-095627-687.jpg" 
-      alt="Bianca Stigma" 
-      class="fade-in glow-hover"
-    >
-  </a>
-
+.raindrop {
+  position: absolute;
+  width: 2px;
+  height: 15px;
+  background: rgba(255,
   <h2>
     <span>🔥</span> PALING BANYAK DI BELI <span>🔥</span>
   </h2>
